apps/core/console/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: console
  annotations:
    external-dns.alpha.kubernetes.io/hostname: console.svc.plus
spec:
  ingressClassName: caddy
  tls:
    - hosts:
        - console.svc.plus
      secretName: console-prod-tls
  rules:
    - host: console.svc.plus
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: console
                port:
                  number: 80
